--- a/pages/4286.html
+++ b/pages/4286.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -324,7 +324,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+Lie+algebra'>Poincaré Lie algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincaré Lie algebra</a>, <a class='existingWikiWord' href='/nlab/show/11d+supergravity+Lie+3-algebra'>supergravity Lie 3-algebra</a>, <a class='existingWikiWord' href='/nlab/show/supergravity+Lie+6-algebra'>supergravity Lie 6-algebra</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincaré Lie algebra</a>, <a class='existingWikiWord' href='/nlab/show/11d+supergravity+Lie+3-algebra'>supergravity Lie 3-algebra</a>, <a class='existingWikiWord' href='/nlab/show/supergravity+Lie+6-algebra'>supergravity Lie 6-algebra</a></li>
 </ul>
 </li>
 
@@ -1090,7 +1090,7 @@ margin-left: 0em;
 
 <p>A <em>black hole</em> is a <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> that solves <a class='existingWikiWord' href='/nlab/show/Einstein+equation'>Einstein equations</a> of <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a> characterized by the fact that it posseses an <strong><a class='existingWikiWord' href='/nlab/show/event+horizon'>event horizon</a></strong> hypersurface (or several of them) which has a number of special characteristics; for example the light can not escape from the space confined by the horizon hypersurface due to <a class='existingWikiWord' href='/nlab/show/gravity'>gravitational</a> effects. Much of the theoretical considerations are about the entropy of black holes (cf. <a class='existingWikiWord' href='/nlab/show/Bekenstein-Hawking+entropy'>Bekenstein-Hawking entropy</a>) and the information paradox.</p>
 
-<p>Black holes are considered theoretically for <a class='existingWikiWord' href='/nlab/show/gravity'>gravitational theories</a> in various number <math class='maruku-mathml' display='inline' id='mathml_e5a8c72e662235ba11b8dad6a02dd39b702e20d3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi></mrow><annotation encoding='application/x-tex'>d</annotation></semantics></math> of dimension. For <math class='maruku-mathml' display='inline' id='mathml_e5a8c72e662235ba11b8dad6a02dd39b702e20d3_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo>≥</mo><mn>5</mn></mrow><annotation encoding='application/x-tex'>d \geq 5</annotation></semantics></math> a black hole <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> may have nontrivial <a class='existingWikiWord' href='/nlab/show/topology'>topology</a>, e.g. <em><a class='existingWikiWord' href='/nlab/show/black+ring'>black rings</a></em> are possible.</p>
+<p>Black holes are considered theoretically for <a class='existingWikiWord' href='/nlab/show/gravity'>gravitational theories</a> in various number <math class='maruku-mathml' display='inline' id='mathml_1576e0b1aed7218543172194f252fda85175ccbd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi></mrow><annotation encoding='application/x-tex'>d</annotation></semantics></math> of dimension. For <math class='maruku-mathml' display='inline' id='mathml_1576e0b1aed7218543172194f252fda85175ccbd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo>≥</mo><mn>5</mn></mrow><annotation encoding='application/x-tex'>d \geq 5</annotation></semantics></math> a black hole <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> may have nontrivial <a class='existingWikiWord' href='/nlab/show/topology'>topology</a>, e.g. <em><a class='existingWikiWord' href='/nlab/show/black+ring'>black rings</a></em> are possible.</p>
 
 <h2 id='examples'>Examples</h2>
 
@@ -1108,7 +1108,7 @@ margin-left: 0em;
 
 <h3 id='topology'>Topology</h3>
 
-<p>Hawking’s <em>Theorem of Black Hole topology</em> asserts that the in case of <math class='maruku-mathml' display='inline' id='mathml_e5a8c72e662235ba11b8dad6a02dd39b702e20d3_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>d = 4</annotation></semantics></math> asymptotically flat stationary black holes satisfying the suitable <a class='existingWikiWord' href='/nlab/show/energy+condition'>dominant energy condition</a>, the cross sections of the <a class='existingWikiWord' href='/nlab/show/event+horizon'>event horizon</a> are spherical.</p>
+<p>Hawking’s <em>Theorem of Black Hole topology</em> asserts that the in case of <math class='maruku-mathml' display='inline' id='mathml_1576e0b1aed7218543172194f252fda85175ccbd_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>d = 4</annotation></semantics></math> asymptotically flat stationary black holes satisfying the suitable <a class='existingWikiWord' href='/nlab/show/energy+condition'>dominant energy condition</a>, the cross sections of the <a class='existingWikiWord' href='/nlab/show/event+horizon'>event horizon</a> are spherical.</p>
 
 <p><a href='#GallowaySchoen'>Galloway and Schoen</a> extended this theorem to higher dimensions; they showed that the cross sections of event horizon (stationary case) and the outer (apparent) horizon (general case) are of Yamabe type.</p>
 
@@ -1141,6 +1141,10 @@ margin-left: 0em;
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Schwarzschild+radius'>Schwarzschild radius</a></p>
+</li>
+
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Kruskal%E2%80%93Szekeres+coordinates'>Kruskal–Szekeres coordinates</a></p>
 </li>
@@ -1247,14 +1251,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August 26, 2016 12:46:40 
+  Revised on November  9, 2017 05:17:39 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.130.223)
+  (88.64.51.223)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/black+hole" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/black+hole/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/black+hole" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/black+hole" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/black+hole" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/black+hole/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/black+hole" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/black+hole" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
