--- a/pages/11615.html
+++ b/pages/11615.html
@@ -713,7 +713,9 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>A refinement of this to contemporary research-level mathematics is <a class='existingWikiWord' href='/nlab/show/synthetic+differential+geometry'>synthetic differential geometry</a>. Here instead of defining the concept of <em><a class='existingWikiWord' href='/nlab/show/smooth+manifold'>smooth manifold</a></em> analytically by “point-set methodology” as is traditional (a <a class='existingWikiWord' href='/nlab/show/set'>set</a> of points equipped with a <a class='existingWikiWord' href='/nlab/show/topology'>topology</a> and a <a class='existingWikiWord' href='/nlab/show/smooth+structure'>smooth structure</a>, etc.) one imposes one single <a class='existingWikiWord' href='/nlab/show/axiom'>axiom</a> scheme in the ambient <a class='existingWikiWord' href='/nlab/show/topos'>topos</a> (the “<a class='existingWikiWord' href='/nlab/show/Kock-Lawvere+axiom'>Kock-Lawvere axiom</a>” in this case) which essentially ensures that for all <a class='existingWikiWord' href='/nlab/show/object'>objects</a>/<a class='existingWikiWord' href='/nlab/show/type'>types</a> <math class='maruku-mathml' display='inline' id='mathml_e9c8784f7fe83e34476ce11d013679042152f2de_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> there exists also an object/type <math class='maruku-mathml' display='inline' id='mathml_e9c8784f7fe83e34476ce11d013679042152f2de_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>T</mi><mi>X</mi></mrow><annotation encoding='application/x-tex'>T X</annotation></semantics></math> which behaves as the <a class='existingWikiWord' href='/nlab/show/tangent+bundle'>tangent bundle</a> of <math class='maruku-mathml' display='inline' id='mathml_e9c8784f7fe83e34476ce11d013679042152f2de_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> should. These axioms then turn out to have <a class='existingWikiWord' href='/nlab/show/model'>models</a> in <a class='existingWikiWord' href='/nlab/show/smooth+set'>smooth spaces</a> (which include <a class='existingWikiWord' href='/nlab/show/smooth+manifold'>smooth manifolds</a>) but also in other, such as <a class='existingWikiWord' href='/nlab/show/algebraic+geometry'>algebraic geometry</a> and <a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometry</a>.</p>
+<p>A refinement of this to contemporary research-level mathematics is <em><a class='existingWikiWord' href='/nlab/show/synthetic+differential+geometry'>synthetic differential geometry</a></em>.</p>
+
+<p>Here instead of defining the concept of <em><a class='existingWikiWord' href='/nlab/show/smooth+manifold'>smooth manifold</a></em> analytically by “point-set methodology” as is traditional (a <a class='existingWikiWord' href='/nlab/show/set'>set</a> of points equipped with a <a class='existingWikiWord' href='/nlab/show/topology'>topology</a> and a <a class='existingWikiWord' href='/nlab/show/smooth+structure'>smooth structure</a>, etc.) one imposes one single <a class='existingWikiWord' href='/nlab/show/axiom'>axiom</a> scheme in the ambient <a class='existingWikiWord' href='/nlab/show/topos'>topos</a> (the “<a class='existingWikiWord' href='/nlab/show/Kock-Lawvere+axiom'>Kock-Lawvere axiom</a>” in this case) which essentially ensures that for all <a class='existingWikiWord' href='/nlab/show/object'>objects</a>/<a class='existingWikiWord' href='/nlab/show/type'>types</a> <math class='maruku-mathml' display='inline' id='mathml_5d89509ba2f55e74ea2a3330bc0f905f3ef57693_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> there exists also an object/type <math class='maruku-mathml' display='inline' id='mathml_5d89509ba2f55e74ea2a3330bc0f905f3ef57693_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>T</mi><mi>X</mi></mrow><annotation encoding='application/x-tex'>T X</annotation></semantics></math> which behaves as the <a class='existingWikiWord' href='/nlab/show/tangent+bundle'>tangent bundle</a> of <math class='maruku-mathml' display='inline' id='mathml_5d89509ba2f55e74ea2a3330bc0f905f3ef57693_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> should. These axioms then turn out to have <a class='existingWikiWord' href='/nlab/show/model'>models</a> in <a class='existingWikiWord' href='/nlab/show/smooth+set'>smooth spaces</a> (which include <a class='existingWikiWord' href='/nlab/show/smooth+manifold'>smooth manifolds</a>) but also in other, such as <a class='existingWikiWord' href='/nlab/show/algebraic+geometry'>algebraic geometry</a> and <a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometry</a>.</p>
 </li>
 </ul>
 
@@ -722,6 +724,10 @@ margin-left: 0em;
 <ul>
 <li>
 <p>With the advent of <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a>, which may be regarded to some extent as a further abstraction of axioms similar to those of model categories, it became more common to speak of this as “synthetic homotopy theory” (e.g. in the <a class='existingWikiWord' href='/nlab/show/Homotopy+Type+Theory+--+Univalent+Foundations+of+Mathematics'>HoTT book</a>).</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/synthetic+differential+topology'>synthetic differential topology</a></p>
 </li>
 
 <li>
@@ -750,14 +756,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 19, 2016 20:16:55 
-  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
-  (108.167.41.14)
+  Revised on November 11, 2017 12:58:47 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (88.64.51.223)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/synthetic+mathematics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/synthetic+mathematics/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/synthetic+mathematics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/synthetic+mathematics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/synthetic+mathematics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/synthetic+mathematics/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/synthetic+mathematics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/synthetic+mathematics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
