--- a/pages/9120.html
+++ b/pages/9120.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -312,9 +312,9 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>(<a class='existingWikiWord' href='/nlab/show/shape+modality'>shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_73b84abe4a317fcb09955c0b6ab28aadb05cae66_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_73b84abe4a317fcb09955c0b6ab28aadb05cae66_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a>)</p>
+<p>(<a class='existingWikiWord' href='/nlab/show/shape+modality'>shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_640fd2c05bcc844150f540bdfaf7a74ee66cef21_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_640fd2c05bcc844150f540bdfaf7a74ee66cef21_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a>)</p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_73b84abe4a317fcb09955c0b6ab28aadb05cae66_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>ʃ</mi><mo>⊣</mo><mo>♭</mo><mo>⊣</mo><mo>♯</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(&amp;#643; \dashv \flat \dashv \sharp )</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_640fd2c05bcc844150f540bdfaf7a74ee66cef21_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>ʃ</mi><mo>⊣</mo><mo>♭</mo><mo>⊣</mo><mo>♯</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(&amp;#643; \dashv \flat \dashv \sharp )</annotation></semantics></math></p>
 
 <ul>
 <li>
@@ -332,9 +332,9 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/dR-shape+modality'>dR-shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_73b84abe4a317fcb09955c0b6ab28aadb05cae66_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/dR-flat+modality'>dR-flat modality</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/dR-shape+modality'>dR-shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_640fd2c05bcc844150f540bdfaf7a74ee66cef21_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/dR-flat+modality'>dR-flat modality</a></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_73b84abe4a317fcb09955c0b6ab28aadb05cae66_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ʃ</mi> <mi>dR</mi></msub><mo>⊣</mo><msub><mo>♭</mo> <mi>dR</mi></msub></mrow><annotation encoding='application/x-tex'>&amp;#643;_{dR} \dashv \flat_{dR}</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_640fd2c05bcc844150f540bdfaf7a74ee66cef21_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ʃ</mi> <mi>dR</mi></msub><mo>⊣</mo><msub><mo>♭</mo> <mi>dR</mi></msub></mrow><annotation encoding='application/x-tex'>&amp;#643;_{dR} \dashv \flat_{dR}</annotation></semantics></math></p>
 </li>
 </ul>
 
@@ -348,9 +348,9 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>(<a class='existingWikiWord' href='/nlab/show/reduction+modality'>reduction modality</a> <math class='maruku-mathml' display='inline' id='mathml_73b84abe4a317fcb09955c0b6ab28aadb05cae66_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/infinitesimal+shape+modality'>infinitesimal shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_73b84abe4a317fcb09955c0b6ab28aadb05cae66_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/infinitesimal+flat+modality'>infinitesimal flat modality</a>)</p>
+<p>(<a class='existingWikiWord' href='/nlab/show/reduction+modality'>reduction modality</a> <math class='maruku-mathml' display='inline' id='mathml_640fd2c05bcc844150f540bdfaf7a74ee66cef21_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/infinitesimal+shape+modality'>infinitesimal shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_640fd2c05bcc844150f540bdfaf7a74ee66cef21_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/infinitesimal+flat+modality'>infinitesimal flat modality</a>)</p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_73b84abe4a317fcb09955c0b6ab28aadb05cae66_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>ℜ</mi><mo>⊣</mo><mi>ℑ</mi><mo>⊣</mo><mi>&amp;</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\Re \dashv \Im \dashv \&amp;)</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_640fd2c05bcc844150f540bdfaf7a74ee66cef21_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>ℜ</mi><mo>⊣</mo><mi>ℑ</mi><mo>⊣</mo><mi>&amp;</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\Re \dashv \Im \dashv \&amp;)</annotation></semantics></math></p>
 
 <ul>
 <li>
@@ -372,12 +372,12 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/bosonic+modality'>fermionic modality</a> <math class='maruku-mathml' display='inline' id='mathml_73b84abe4a317fcb09955c0b6ab28aadb05cae66_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/bosonic+modality'>bosonic modality</a> <math class='maruku-mathml' display='inline' id='mathml_73b84abe4a317fcb09955c0b6ab28aadb05cae66_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/rheonomy+modality'>rheonomy modality</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/bosonic+modality'>fermionic modality</a> <math class='maruku-mathml' display='inline' id='mathml_640fd2c05bcc844150f540bdfaf7a74ee66cef21_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/bosonic+modality'>bosonic modality</a> <math class='maruku-mathml' display='inline' id='mathml_640fd2c05bcc844150f540bdfaf7a74ee66cef21_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/rheonomy+modality'>rheonomy modality</a></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_73b84abe4a317fcb09955c0b6ab28aadb05cae66_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo>⇉</mo><mo>⊣</mo><mo>⇝</mo><mo>⊣</mo><mi>Rh</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\rightrightarrows \dashv \rightsquigarrow \dashv Rh)</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_640fd2c05bcc844150f540bdfaf7a74ee66cef21_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo>⇉</mo><mo>⊣</mo><mo>⇝</mo><mo>⊣</mo><mi>Rh</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\rightrightarrows \dashv \rightsquigarrow \dashv Rh)</annotation></semantics></math></p>
 </li>
 </ul>
-<div class='maruku-equation' id='Diagram'><math class='maruku-mathml' display='block' id='mathml_73b84abe4a317fcb09955c0b6ab28aadb05cae66_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd><mi>id</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>id</mi></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>fermionic</mi></mover></mtd> <mtd><mo>⇉</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>⇝</mo></mtd> <mtd><mover><mrow></mrow><mi>bosonic</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>bosonic</mi></mover></mtd> <mtd><mo>⇝</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>Rh</mi></mtd> <mtd><mover><mrow></mrow><mi>rheonomic</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>reduced</mi></mover></mtd> <mtd><mi>ℜ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>ℑ</mi></mtd> <mtd><mover><mrow></mrow><mi>infinitesimal</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>infinitesimal</mi></mover></mtd> <mtd><mi>ℑ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>&amp;</mi></mtd> <mtd><mover><mrow></mrow><mtext>étale</mtext></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>cohesive</mi></mover></mtd> <mtd><mi>ʃ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>♭</mo></mtd> <mtd><mover><mrow></mrow><mi>discrete</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>discrete</mi></mover></mtd> <mtd><mo>♭</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>♯</mo></mtd> <mtd><mover><mrow></mrow><mi>continuous</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mi>∅</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>*</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation' id='Diagram'><math class='maruku-mathml' display='block' id='mathml_640fd2c05bcc844150f540bdfaf7a74ee66cef21_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd><mi>id</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>id</mi></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>fermionic</mi></mover></mtd> <mtd><mo>⇉</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>⇝</mo></mtd> <mtd><mover><mrow></mrow><mi>bosonic</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>bosonic</mi></mover></mtd> <mtd><mo>⇝</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>Rh</mi></mtd> <mtd><mover><mrow></mrow><mi>rheonomic</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>reduced</mi></mover></mtd> <mtd><mi>ℜ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>ℑ</mi></mtd> <mtd><mover><mrow></mrow><mi>infinitesimal</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>infinitesimal</mi></mover></mtd> <mtd><mi>ℑ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>&amp;</mi></mtd> <mtd><mover><mrow></mrow><mtext>étale</mtext></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>cohesive</mi></mover></mtd> <mtd><mi>ʃ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>♭</mo></mtd> <mtd><mover><mrow></mrow><mi>discrete</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>discrete</mi></mover></mtd> <mtd><mo>♭</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>♯</mo></mtd> <mtd><mover><mrow></mrow><mi>continuous</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mi>∅</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>*</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \array{
     &amp;&amp; id &amp;\dashv&amp; id 
     \\
@@ -414,14 +414,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 22, 2016 04:12:21 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (109.144.223.252)
+  Revised on November 11, 2017 15:31:24 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (209.93.199.52)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cohesion+-+table" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cohesion+-+table/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/cohesion+-+table" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cohesion+-+table" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/cohesion+-+table" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cohesion+-+table/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/cohesion+-+table" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cohesion+-+table" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
